--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.retail</groupId>
-	<artifactId>spring-boot-jpa-h2</artifactId>
+	<artifactId>spring-boot-retail</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-boot-jpa-h2</name>
-	<description>Spring Boot </description>
+	<description>Spring Boot retail</description>
 
 	<properties>
 		<java.version>17</java.version>
@@ -36,6 +36,9 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
@@ -44,7 +47,33 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			
+			</plugin>
+			<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-site-plugin</artifactId>
+				  <version>3.12.1</version>
+			</plugin>
 		</plugins>
 	</build>
+	<reporting>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-report-plugin</artifactId>
+            <version>2.19.1</version>
+            <reportSets>
+                <reportSet>
+                    <reports>
+                        <report>report-only</report>
+                    </reports>
+                </reportSet>
+            </reportSets>
+        </plugin>
+    </plugins>
+</reporting>
 
 </project>
